Added 'to top' links. Modified the contact us page

--- a/app/views/static/open_source.html.haml
+++ b/app/views/static/open_source.html.haml
@@ -10,7 +10,7 @@
               %li
                 = link_to "#{raw open_source[:id]}", "##{open_source[:id]}"
     .col-lg-10
-      - @open_sources.each do |open_source|
+      - @open_sources.each_with_index do |open_source, indx|
         .blog-item{:id => open_source[:id]}
           .row
             .col-md-12
@@ -27,3 +27,6 @@
                     %iframe{:src=> "http://ghbtns.com/github-btn.html?user=#{open_source[:github][:user]}&repo=#{open_source[:github][:repo]}&type=watch&count=true", :allowtransparency => "true", :frameborder => "0", :scrolling => "0", :width => "95px", :height => "20px"}
               %p 
                 = raw open_source[:details]
+              - if indx > 2
+                %a.pull-right{href: '#'}
+                  %i.icon-arrow-up{"data-toggle"=>"tooltip", "data-placement"=>"top", "data-original-title"=>"To top"}
