--- a/app/views/static/portfolio.html.haml
+++ b/app/views/static/portfolio.html.haml
@@ -42,5 +42,5 @@
               %br
               %p= raw project[:description]
               %a.pull-right{:href => "#"}
-                %i.icon-arrow-up
+                %i.icon-arrow-up{'data-toggle'=> 'tooltip', title: 'To top', 'data-placement'=> 'top'}
 
