--- a/app/views/shared/_footer.html.haml
+++ b/app/views/shared/_footer.html.haml
@@ -3,6 +3,7 @@
     .row
       .col-lg-3.col-sm-3
         %h1 Josh Software
+        .moto Programming is an art.
         .footer_data
           Josh stands for enthusiasm and passion. We Believe Programming is an Art and build Innovative Web Based Applications on an Open Source framework for our world-wide clientele.
         /
