--- a/app/views/shared/_header.html.haml
+++ b/app/views/shared/_header.html.haml
@@ -12,6 +12,15 @@
         %ul.nav.navbar-nav
           %li{class: "#{check_if_active('home')}"}
             = link_to 'Home', root_path
+          %li.dropdown
+            %a.dropdown-toggle{"data-close-others" => "false", "data-delay" => "0", "data-hover" => "dropdown", "data-toggle" => "dropdow    n", :href => "#"}
+              About Us
+              %b.icon-angle-down
+            %ul.dropdown-menu
+              %li
+                %a{:href => "team"} Team
+              %li
+                %a{:href => "#"} Josh in News
           %li{class: "#{check_if_active('portfolio')}"}
             %a{:href => "portfolio"} Portfolio
           %li{class: "#{check_if_active('team')}"}
@@ -19,11 +28,11 @@
           %li{class: "#{check_if_active('testimonials')}"}
             %a{:href => "testimonials"} Testimonials
           %li{class: "#{check_if_active('open_source')}"}
-            %a{:href => "open_source"} Open Source
+            %a{:href => "open-source"} Open Source
           %li
             %a{:href => "http://blog.joshsoftware.com/", target: '_blank'} Blog
           %li{class: "#{check_if_active('contact_us')}"}
-            %a{:href => "contact_us"} Contact Us
+            = link_to 'Contact Us', new_contact_path
           /
             %li
               %input.form-control.search{:placeholder => " Search", :type => "text"}/
