fixed the drop down menu

--- a/app/views/shared/_header.html.haml
+++ b/app/views/shared/_header.html.haml
@@ -16,7 +16,7 @@
             %a.dropdown-toggle{"data-close-others" => "false", "data-delay" => "0", "data-hover" => "dropdown", "data-toggle" => "dropdow    n", :href => "#"}
               About Us
               %b.icon-angle-down
-            %ul.dropdown-menu
+            %ul.dropdown-menu.decrease_dropdown
               %li
                 %a{:href => "team"} Team
               %li
