--- a/app/views/shared/_header.html.haml
+++ b/app/views/shared/_header.html.haml
@@ -18,13 +18,13 @@
               %b.icon-angle-down
             %ul.dropdown-menu.decrease_dropdown
               %li
+                %a{:href => "about-us"} Company
+              %li
                 %a{:href => "team"} Team
               %li
                 %a{:href => "#"} Josh in News
           %li{class: "#{check_if_active('portfolio')}"}
             %a{:href => "portfolio"} Portfolio
-          %li{class: "#{check_if_active('team')}"}
-            %a{:href => "team"} Team
           %li{class: "#{check_if_active('testimonials')}"}
             %a{:href => "testimonials"} Testimonials
           %li{class: "#{check_if_active('open_source')}"}
