Removed retina gem Added new images for news page Added method to static controller for news page Modified the header and footer Modified the contact us page changed open source project data in initializer

--- a/app/views/contacts/new.html.haml
+++ b/app/views/contacts/new.html.haml
@@ -17,13 +17,9 @@
       %br/
       %br/
       %p
-        Phone
+        Phone: +91 - 20 - 25539995
         %br/
-        %span.muted +91 - 20 - 25539995
-        %br/
-        Email
-        %br/
-        %span.muted info@joshsoftware.com
+        Email: info@joshsoftware.com
     .col-lg-7.col-sm-7.address
       %h4 Send a Message
       .contact-form
