--- a/app/views/shared/_footer.html.haml
+++ b/app/views/shared/_footer.html.haml
@@ -3,7 +3,7 @@
     .row
       .col-lg-3.col-sm-3
         %h1 Josh Software
-        .moto Programming is an art.
+        .moto Ruby on Rails experts.
         .footer_data
           Josh stands for enthusiasm and passion. We believe Programming is an Art and build Innovative Web Based Applications on an Open Source framework for our world-wide clientele.
         /
