--- a/app/views/shared/_header.html.haml
+++ b/app/views/shared/_header.html.haml
@@ -22,7 +22,7 @@
               %li
                 %a{:href => "team"} Team
               %li
-                %a{:href => "#"} Josh in News
+                %a{:href => "news"} Josh in News
           %li{class: "#{check_if_active('portfolio')}"}
             %a{:href => "portfolio"} Portfolio
           %li{class: "#{check_if_active('testimonials')}"}
