UI changes on Josh in news page

--- a/app/views/static/about_us.html.haml
+++ b/app/views/static/about_us.html.haml
@@ -34,14 +34,14 @@
         .content
           %h3
             = link_to "View our Client Portfolio", 'portfolio', class: 'title'
-          %p XXXXXXXXXXXX XXXXXXXXXXXXXX XXXXXXXXXXXXXXXXX XXXXXXXXXXXXXXXXXXXX XXXXXXXXXXXXXXXXXXX 
+          %p We have conceptualized and deployed more than 50 Ruby on Rails applications the world over across domains like manufacturing, travel, e-commerce, insurance, education and media. Here is a collection of some of our best work. 
       .col-lg-6.col-sm-6
         .icon-wrap.ico-bg.round
           %i.icon-group
         .content
           %h3
             = link_to 'Meet our team', 'team', class: 'title'
-          %p XXXXXXXXXXXX XXXXXXXXXXXXXX XXXXXXXXXXXXXXXXX XXXXXXXXXXXXXXXXXXXX XXXXXXXXXXXXXXXXXXX 
+          %p Our team of young, dynamic developers has been handpicked with one criteria – a hunger for developing path-breaking code. Learn more and connect with the Josh team. 
 .container.well
   .row
     .col-lg-12.about
