--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -8,17 +8,18 @@
  * You're free to add application-wide styles to this file and they'll appear at the top of the
  * compiled file, but it's generally better to create a new file per style scope.
  *
- *= require bootstrap/bootstrap.min.css
- *= require others/theme.css
- *= require others/bootstrap-reset.css
- *= require font_awesome/font-awesome.css
- *= require others/flexslider.css 
- *= require bxslider/jquery.bxslider.css
- *= require fancybox/jquery.fancybox.css
- *= require revolution_slider/rs-style.css
- *= require revolution_slider/settings.css
- *= require superfish/superfish.css
- *= require superfish/superfish-vertical.css
- *= require others/style.css
- *= require others/style-responsive.css
  */
+ 
+ @import "bootstrap/bootstrap.min";
+ @import "others/theme";
+ @import "others/bootstrap-reset";
+ @import "font_awesome/font-awesome";
+ @import "others/flexslider"; 
+ @import "bxslider/jquery.bxslider";
+ @import "fancybox/jquery.fancybox";
+ @import "revolution_slider/rs-style";
+ @import "revolution_slider/settings";
+ @import "superfish/superfish";
+ @import "superfish/superfish-vertical";
+ @import "others/style";
+ @import "others/style-responsive";
