--- a/app/views/notifier/notify_contact.html.haml
+++ b/app/views/notifier/notify_contact.html.haml
@@ -7,8 +7,14 @@
   Name: #{@contact.name}
   %br  
   Email: #{@contact.email}
+  %br
+  Skype ID: #{@contact.skype_id}
   %br  
   Phone: #{@contact.phone}
+  %br
+  IP Address: #{@contact.ip}
+  %br
+  Location: #{@contact.location}
   %br  
   Message: #{@contact.message}
 %p
