Added new josh office lat-long for google maps. updated address.

--- a/app/views/contacts/new.html.haml
+++ b/app/views/contacts/new.html.haml
@@ -3,21 +3,41 @@
   #map-canvas{:style => "width: 100%; height: 398px"}
 .container
   .row
+    /
+      .col-lg-5.col-sm-5.address
+        %h4 Pune
+        %p
+          Josh Software
+          %br/
+          Address: 6, Thube Park, Shivajinagar,
+          %br/
+          Pune - 411 005,
+          %br/
+          Maharashtra, India.
+        %br/
+        %br/
+        %br/
+        %p
+          Phone: +91 - 20 - 25539995
+          %br/
+          Email: info@joshsoftware.com
     .col-lg-5.col-sm-5.address
       %h4 Pune
       %p
         Josh Software
         %br/
-        Address: 6, Thube Park, Shivajinagar,
+        Address: A13/14 Sunflower Building, 5th Floor,
         %br/
-        Pune - 411 005,
+        Survey No. 77/1, Mhalunge Baner Road,
+        %br/
+        Baner, Pune - 411 045,
         %br/
         Maharashtra, India.
       %br/
       %br/
       %br/
       %p
-        Phone: +91 - 20 - 25539995
+        Phone: +91 - 20 - 206531316
         %br/
         Email: info@joshsoftware.com
     .col-lg-7.col-sm-7.address
@@ -53,7 +73,7 @@
 
   function initialize() {
       // use http://www.findlatitudeandlongitude.com/ to find lat long
-      var myLatlng = new google.maps.LatLng(18.53041, 73.851592);
+      var myLatlng = new google.maps.LatLng(18.561045, 73.785795);
       var mapOptions = {
           zoom: 15,
           center: myLatlng,
