--- a/app/views/contacts/new.html.haml
+++ b/app/views/contacts/new.html.haml
@@ -84,7 +84,7 @@
       var marker = new google.maps.Marker({
           position: myLatlng,
           map: map,
-          title: 'Josh Softaware'
+          title: 'Josh Software Pvt Ltd'
       });
   }
   google.maps.event.addDomListener(window, 'load', initialize);
