Adding link for hiring

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -23,3 +23,8 @@
  @import "superfish/superfish-vertical";
  @import "others/style";
  @import "others/style-responsive";
+
+
+.we_hiring{
+  padding-top: 45px;
+}
