--- a/app/views/shared/_header.html.haml
+++ b/app/views/shared/_header.html.haml
@@ -9,7 +9,7 @@
         .row
           %a.navbar-brand.pull-left{:href => root_path}
             = image_tag 'JOSHSoftware_LogoStack_Color_org.png', alt: 'Josh Software'
-          %div.pull-left.we_hiring= mail_to "hr@joshsoftware.com", image_tag("hiring1.png", height: '35', width: '110'), subject: 'Applying for a job.'
+          %div.pull-left.we_hiring= mail_to "hr@joshsoftware.com", image_tag("hiring1.png", height: '40', width: '130'), subject: 'Application for ROR developer post.'
       .navbar-collapse.collapse
         %ul.nav.navbar-nav
           %li{class: "#{check_if_active('home')}"}
