--- a/app/views/contacts/new.html.haml
+++ b/app/views/contacts/new.html.haml
@@ -37,9 +37,9 @@
       %br/
       %br/
       %p
-        /
-          Phone: +91 - 20 - 206531316
-          %br/
+        
+        Phone: +91-20-65313161
+        %br/
         Email: info@joshsoftware.com
     .col-lg-7.col-sm-7.address
       %h4 Send a Message
