adding fundamentor details and avadhoot's name

--- a/app/views/shared/_footer.html.haml
+++ b/app/views/shared/_footer.html.haml
@@ -56,4 +56,4 @@
               = link_to 'Contact Us', new_contact_path, class: 'pull-right'
     .row
       .copyright.text-center
-        Copyright © 2007 - 2014 Josh Software Pvt. Ltd.
+        Copyright © 2007 - #{Time.now.year} Josh Software Pvt. Ltd.
