--- a/app/views/static/home.html.haml
+++ b/app/views/static/home.html.haml
@@ -59,6 +59,9 @@
       .col-lg-12.text-center
         %ul.list-unstyled
           %li
+            %a{href: 'portfolio/#Fundamentor'}
+              = image_tag "client_logos/fundamentor_logo.jpg"
+          %li
             %a{href: 'portfolio/#Altizon Datonis'}
               = image_tag "client_logos/altizon_logo.png", class: 'logo_width'
           %li
@@ -70,6 +73,3 @@
           %li
             %a{href: 'portfolio/#TourConnect'}
               = image_tag "client_logos/tourConnectLogo.png", class: 'logo_width'
-          %li
-            %a{href: 'portfolio/#Shopgodt'}
-              = image_tag "client_logos/shopgodt_logo.svg", class: 'logo_width'
