Adding groupbuzz news, ammend team page and hyperlink for mesitis

--- a/app/views/contacts/new.html.haml
+++ b/app/views/contacts/new.html.haml
@@ -28,7 +28,7 @@
         %br/
         Address: A13/14 Sunflower Building, 5th Floor,
         %br/
-        Survey No. 77/1, Mhalunge Baner Road,
+        Survey No. 77/1, Mahalunge Baner Road,
         %br/
         Baner, Pune - 411 045,
         %br/
