Newletter subscription + code curiosity widget

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -28,3 +28,11 @@
 .we_hiring{
   padding-top: 5px;
 }
+
+.newsletter-header{
+  background-color: #f39c12;
+}
+
+.newsletter-text{
+  color: #333333;
+}
