--- a/app/views/static/home.html.haml
+++ b/app/views/static/home.html.haml
@@ -36,7 +36,14 @@
         are some of the tools we use to ensure our clients are always happy!
 .container
   .row.well
-    .col-lg-9.col-md-9.col-sm-9.col-xs-12
+    .col-lg-4.col-md-4.col-sm-3.col-xs-9
+      .about-testimonial
+        .about-testimonial-author Newsletter
+      %br
+      %br
+      //%iframe{src: "https://codecuriosity.org/widgets/group/576425c6d1a1cc5504000012", height: "380", width: "340", frameborder: "0"}
+      %iframe{src: "http://joshsoftware.com/subscribe", height: "410", width: "340", frameborder: "0"}
+    .col-lg-4.col-md-4.col-sm-3.col-xs-12
       .about-testimonial.boxed-style.about-flexslider
         %section.slider
           .flexslider
@@ -48,11 +55,26 @@
                   .about-testimonial-content
                     %p.about-testimonial-quote
                       #{raw testimonial[:endorsement].split("<wbr>")[0]}
-    .col-lg-3.col-md-3.col-sm-3.col-xs-9
+    .col-lg-4.col-md-4.col-sm-3.col-xs-9
       .about-testimonial
-        .about-testimonial-author Fun at JOSH
-      #fun.align-center
+        .about-testimonial-author Open Source
+      %br
+      %br
+      %iframe{src: "https://codecuriosity.org/widgets/group/576425c6d1a1cc5504000012", height: "410", width: "340", frameborder: "0"}
+        //.about-testimonial-author Fun at JOSH
+      //#fun.align-center
+      //= image_tag 'loading.gif'
+  .row.well
+    .col-md-6
+    .col-md-12
+      #fun
         = image_tag 'loading.gif'
+        //.left.carousel-control{href: '#myFunCarousel', "data" => {slide: "prev"}}
+        //%i.glyphicon.glyphicon-chevron-left
+
+        //.right.carousel-control{href: '#myFunCarousel', "data" => {slide: "next"}}
+        //%i.glyphicon.glyphicon-chevron-right
+
 .parallax1
   .clients
     .container
